--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     text-align: center;
 }
 .text-center{
-    margin-top: 290px;
+    margin-top: 200px;
 }
 input{
     height: 130px !important;
@@ -26,7 +26,7 @@ button{
         background-image: url(/stop2.jpg);
         background-repeat: no-repeat;
         height: 850px;
-        overflow-y: hidden;
+        /* overflow-y: hidden; */
     }
     .text-center{
         margin-top: 10%;
