--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ input{
     color: red !important;
 }
 button{
-    font-size: 60px !important;
-    padding: 40px 40px 40px 40px !important;
-    font-family: 'Times New Roman', Times, serif !important;
+    font-size: 40px !important;
+    padding: 25px 25px 25px 25px !important;
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
 }
 @media screen and (max-width: 864px) {
     body{
@@ -43,7 +43,7 @@ button{
 }
 @media screen and (max-width: 520px) {
     .get{
-        color: red !important;
+        color: white !important;
         font-size: 20px !important;
         margin-top: -30px !important;
     }
@@ -54,7 +54,7 @@ button{
 }
 
 .get{
-    color: red !important;
+    color: white !important;
     font-weight: 900 !important;
     font-size: 70px !important;
 }
